<resources>
    <string name="app_name">ToDoList</string>
    <string name="list_settings">Settings</string>
    <string name="year_month_day_numberic">%d/%02d/%02d</string>
    <string name="year_and_month">%d年%02d月</string>
    <string name="year_month_day">%d年%02d月%02d日</string>
    <string name="month_and_day">%02d月%02d日</string>
    <string name="empty_item_text">没有日程</string>
    <string name="date_item_header">我的List(%s):</string>
    <string name="before_day_num">%d天前</string>
    <string name="after_day_num">%d天后</string>
    <string name="today">今天</string>
    <string name="yesterday">昨天</string>
    <string name="before_yesterday">前天</string>
    <string name="tomorrow">明天</string>
    <string name="after_tomorrow">后天</string>
    <string name="home">首页</string>
    <string name="calendar">日历</string>
    <string name="graph">图表</string>
    <string name="alarm">闹钟</string>
    <string name="hour_minute">%02d:%02d</string>
    <string name="no_alarm">没有闹钟</string>
    <string name="hour_or_minute">%02d</string>
    <string name="edit_alarm">编辑闹钟</string>
    <string name="create_alarm">新建闹钟</string>
    <string name="delete_alarm">删除闹钟</string>
    <string name="alarm_note">备注:</string>
    <string name="new_alarm_note">该记录今天的成果了！</string>
    <string name="alarm_name">闹钟名</string>
    <string name="stop">停止</string>
    <string name="graph_good">优秀:%d%%</string>
    <string name="graph_ordinary">一般:%d%%</string>
    <string name="graph_bad">糟糕:%d%%</string>
    <string name="graph_no_record">未记录:%d%%</string>
    <string name="graph_max_length_text">未记录:100%</string>
    <string name="graph_evaluation0">统计：%n当月总共%d天，总共记录了%d天，未记录的有%d天。%n</string>
    <string name="graph_evaluation1">根据标记情况，其中评价优秀的有%d天；</string>
    <string name="graph_evaluation2">评价一般的有%d天；</string>
    <string name="graph_evaluation3">评价糟糕的有%d天。%n</string>
    <string name="graph_evaluation4"> 评价最优秀的是%d月%d日，</string>
    <string name="graph_evaluation5">最糟糕的是%d月%d日。</string>
    <string name="graph_standard">评价标准：\n按照当日所列的list，完成比率超过80%为优秀，完成比率50%到80%为一般，
        完成比率在50%以下的为糟糕。</string>
</resources>
