<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="@color/color_white">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/alarm_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="@string/edit_alarm"
        app:navigationIcon="@drawable/cancel"
        android:background="@color/colorTheme">
        <ImageView
            android:id="@+id/alarm_confirm"
            android:padding="@dimen/default_layout_padding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:src="@drawable/confirm_bg"
             />
    </androidx.appcompat.widget.Toolbar>
    <View
        android:id="@+id/single_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_color"
        android:layout_below="@id/alarm_toolbar"/>
    <LinearLayout
        android:id="@+id/wheel_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/single_line"
        android:paddingTop="@dimen/default_layout_padding"
        android:paddingBottom="@dimen/default_layout_padding"
        android:paddingStart="@dimen/medium_padding"
        android:paddingEnd="@dimen/medium_padding">
        <com.example.todolist.view.WheelView
            android:id="@+id/hour_wheel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <com.example.todolist.view.WheelView
            android:id="@+id/minute_wheel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/note_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/wheel_layout"
        android:padding="@dimen/default_layout_padding"
        android:background="@drawable/item_bg"
        android:orientation="horizontal">
        <TextView
            android:textColor="@color/day_text_color"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/alarm_note"
            android:textSize="16sp"
            android:layout_gravity="center_vertical"/>
        <TextView
            android:id="@+id/note_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="14sp"
            android:textColor="@color/week_text_color"
            android:gravity="end"
            android:layout_gravity="center_vertical"
            android:text="@string/new_alarm_note"/>
        <ImageView
            android:src="@drawable/go"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/default_margin"/>
    </LinearLayout>
    <TextView
        android:id="@+id/delete_alarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/default_inner_padding"
        android:paddingBottom="@dimen/default_inner_padding"
        android:paddingStart="@dimen/big_padding"
        android:paddingEnd="@dimen/big_padding"
        android:text="@string/delete_alarm"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/big_margin"
        android:background="@drawable/del_alarm_bg"
        android:textSize="16sp"/>
</RelativeLayout>