<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?android:attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:background="@color/colorTheme"
        app:title="@string/home">
    </androidx.appcompat.widget.Toolbar>
    <include layout="@layout/horizontal_line"/>
    <FrameLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </FrameLayout>
    <include layout="@layout/horizontal_line"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">
        <LinearLayout
            android:id="@+id/home_tab"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingTop="@dimen/default_inner_padding"
            android:paddingBottom="@dimen/default_inner_padding">
            <ImageView
                android:id="@+id/home_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/home"
                />
            <TextView
                android:id="@+id/home_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home"
                android:textSize="14sp"
                android:textColor="@color/day_text_color"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/calendar_tab"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingTop="@dimen/default_inner_padding"
            android:paddingBottom="@dimen/default_inner_padding">
            <ImageView
                android:id="@+id/calendar_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/calendar" />
            <TextView
                android:id="@+id/calendar_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calendar"
                android:textSize="14sp"
                android:textColor="@color/day_text_color"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/graph_tab"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingTop="@dimen/default_inner_padding"
            android:paddingBottom="@dimen/default_inner_padding">
            <ImageView
                android:id="@+id/graph_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/graph" />
            <TextView
                android:id="@+id/graph_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/graph"
                android:textSize="14sp"
                android:textColor="@color/day_text_color"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/alarm_tab"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingTop="@dimen/default_inner_padding"
            android:paddingBottom="@dimen/default_inner_padding">
            <ImageView
                android:id="@+id/alarm_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/alarm" />
            <TextView
                android:id="@+id/alarm_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alarm"
                android:textSize="14sp"
                android:textColor="@color/day_text_color"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>